--- a/cscss/style.scss
+++ b/cscss/style.scss
@@ -46,6 +46,7 @@ header{
       float: right;
     }
   
+  
     
   }
 
@@ -75,6 +76,9 @@ header{
         text-decoration: none;
       }
     }
+    
+
+    
   }
   
 @media (min-width: 550px) {/*550以上のとき*/
@@ -287,7 +291,7 @@ header{
     letter-spacing: 0.2rem;
   }
 
-  .news_li{
+  .news_lists{
 
     li{
       list-style: none;
@@ -315,7 +319,7 @@ header{
       letter-spacing: 0.2rem;
     }
 
-    .news_li{
+    .news_lists{
 
       li{
         list-style: none;
